[package]
name = "carpenter-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
byteorder = "1.5.0"
bytestream = "0.4.1"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits", "visit", "visit-mut", "fold"] }
