[package]
name = "carpenter-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Derive macros for carpenter"
homepage = "https://github.com/MeloenCoding/carpenter"
documentation = "https://github.com/MeloenCoding/carpenter"
repository = "https://github.com/MeloenCoding/carpenter"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
byteorder = "1.5.0"
bytestream = "0.4.1"
quote = "1.0.33"
syn = { version = "2.0.38", features = ["full", "extra-traits", "visit", "visit-mut", "fold"] }
